
 - added Visench C1K (using serial port converter with USB ID `1a86:7523`)
   as known supported by `nutdrv_qx` (Megatec protocol) since at least
   NUT v2.7.4 release [#2395]

 - usbhid-ups updates:
   * Support of the `onlinedischarge_log_throttle_hovercharge` in the NUT
     v2.8.2 release was found to be incomplete. [#2423, follow-up to #2215]
   * General suggestion from `possibly_supported()` message method for devices
     with VendorID=`0x06da` (Phoenixtec), seen in some models supported by
     MGE HID or Liebert HID, updated to suggest trying `nutdrv_qx`. [#334]
   * MGE HID list of `mge_model_names[]` was extended for Eaton 5PX and 5SC
     series (largely guessing, feedback and PRs for adaptation to actual
     string values reported by devices via USB are welcome), so these devices
     would now report `battery.voltage` and `battery.voltage.nominal`. [#2380]
   * `powercom-hid` subdriver sent UPS shutdown commands in wrong byte order,
     at least for devices currently in the field. A toggle was added to set
     the old behavior (if some devices do need it), while a fix is applied
     by default: `powercom_sdcmd_byte_order_fallback`. [PR #2480]
   * `cps-hid` subdriver now supports more variables, as available on e.g.
     CP1350EPFCLCD model. [PR #2540]

 - bicker_ser: added new driver for Bicker 12/24Vdc UPS via RS-232 serial
   communication protocol, which supports any UPS shipped with the PSZ-1053
   extension module. [PR #2448]

 - USB drivers could log `(nut_)libusb_get_string: Success` due to either
   reading an empty string or getting a success code `0` from libusb.
   This difference should now be better logged, and not into syslog. [#2399]

 - Introduced a new driver concept for interaction with OS-reported hardware
   monitoring readings. Currently instantiated as `hwmon_ina219` specifically
   made for Texas Instruments INA219 chip as exposed in the Linux "hwmon"